--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -51,7 +51,7 @@
                     class="rounded-circle z-depth-0 logs"
                     alt="avatar image"
                   />
-                  Adrian
+                  {{user.firstName}}
                 </a>
                 <div
                   class="dropdown-menu dropdown-menu-lg-right dropdown-primary"
