--- a/src/app/manageusers/activeusers/activeusers.component.html
+++ b/src/app/manageusers/activeusers/activeusers.component.html
@@ -145,7 +145,7 @@
           </div>
         </div>
       
-        <table class="table table-hover table-sm mar">
+        <table class="table table-hover table-sm mar mt-2">
           <thead>
             <tr>
               <th>Firstname</th>
