--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -4,7 +4,7 @@
       <nav class="navbar sticky-top navbar-expand-lg  static-top" *ngIf="currentUser">
         <div class="container">
           <a class="navbar-brand " href="#">
-            <img src="/assets/logo.png" class="logs" />
+            <img src="/assets/logo1.1.png" class="logs" />
             <a class="sentence">
                 <div class="slidingVertical">
                   <span>Congressional Reporting System  </span>
@@ -51,7 +51,7 @@
                     class="rounded-circle z-depth-0 logs"
                     alt="avatar image"
                   />
-                  {{user.firstName}}
+                  {{currentUser.firstName}}
                 </a>
                 <div
                   class="dropdown-menu dropdown-menu-lg-right dropdown-primary"
