--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -50,7 +50,7 @@
                 </form>
               </div>
         <div class="container reportpanel">
-                <button type="button" class="btn btn-sm btn-primary  float-right"><i class="fa fa-download"></i>Download</button>
+                <button type="button" class="btn btn-sm btn-primary  float-right"><i class="fa fa-download"></i></button>
                 <p>No reports generated.Click generate reports button.</p>
             </div>
 </div>
