--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,12 @@
 .mainnav{
     height: 40px;
-    box-shadow: 0px 10px 10px -15px #111;   
+    box-shadow: 0px 13px 13px -12px #8B8B8B ;   
     font-size: 15px;
+    background-color: #3C97F9 ;
 }
 .mainnav a{
     padding: 8px 15px;
+    color: white;
 }
 .mainnav a:hover{   
     color: black;
