--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
 body{
-    font-family: fantasy;
-    /* background-image: url('/assets/bg3.png');
-    background-repeat: no-repeat; */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
