--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,8 @@
                     </div>
                     
                       <div class="card">
-                        <div class="card-body mt-2" style="height: 300px;box-shadow: 0px 13px 13px -12px #8B8B8B ;   ">
+                        <div class="card-body mt-2" style="box-shadow: 0px 13px 13px -12px #8B8B8B ;   ">
+                            <h2>Login</h2>
                           <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                             <div class="form-group">
                               <label for="username">Username</label>
@@ -50,7 +51,7 @@
                             </div>
                           </form>
                           <p>Not a member?
-                                <a href="">Register</a>
+                                <a routerLink="/signup">Sign up</a>
                               </p>
                         </div>
                       </div>
