--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -22,52 +22,67 @@
           <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <div class="form-row ">
               <div class="form-group col-md-6 ">
-                <label class="label-sm">First Name</label>
+                <label for="firstName" class="label-sm">First Name</label>
+                <input class="form-control form-control-sm mar" formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"/>
+                <div
+                  *ngIf="submitted && f.firstName.errors"
+                  class="invalid-feedback"
+                >
+                  <div *ngIf="f.firstName.errors.required">
+                    First Name is required
+                  </div>
+                </div>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="lastName" class="label-sm">Last Name</label>
+                <input class="form-control form-control-sm mar" formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                        <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                    </div>
+              </div>
+            </div>
+
+            <div class="form-group mar">
+              <label for="address" class="label-sm">Address</label>
+              <input type="text" formControlName="address" class="form-control form-control-sm mar" [ngClass]="{ 'is-invalid': submitted && f.address.errors }"/>
+              <div *ngIf="submitted && f.address.errors" class="invalid-feedback">
+                    <div *ngIf="f.address.errors.required">Address is required</div>
+                </div>
+            </div>
+            <div class="form-row mar">
+              <div class="form-group col-md-6 ">
+                <label class="label-sm">Mobile number</label>
                 <input class="form-control form-control-sm mar" />
               </div>
               <div class="form-group col-md-6">
-                <label class="label-sm">Last Name</label>
-                <input class="form-control form-control-sm mar" />
+                <label class="label-sm">Department</label>
+                <select class="form-control form-control-sm mar">
+                  <option>Department 1</option>
+                  <option>Department 2</option>
+                </select>
               </div>
             </div>
-    
             <div class="form-group mar">
-              <label class="label-sm">Address</label>
-              <input
-                type="text"
-                class="form-control form-control-sm mar"
-              />
+              <label class="label-sm mar">Email</label>
+              <input type="text" class="form-control form-control-sm mar" />
             </div>
             <div class="form-row mar">
-                    <div class="form-group col-md-6 ">
-                      <label class="label-sm">Mobile number</label>
-                      <input class="form-control form-control-sm mar" />
+              <div class="form-group col-md-6 ">
+                <label for="username" class="label-sm">Username</label>
+                <input class="form-control form-control-sm mar" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
+                <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                        <div *ngIf="f.username.errors.required">Username is required</div>
                     </div>
-                    <div class="form-group col-md-6">
-                            <label class="label-sm">Department</label>
-                            <select class="form-control form-control-sm mar" >
-                              <option>Department 1</option>
-                              <option>Department 2</option>
-                            </select>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="password" class="label-sm">Password</label>
+                <input class="form-control form-control-sm mar" type="password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
+                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
                     </div>
-                  </div>
-                  <div class="form-group mar">
-                        <label class="label-sm mar">Email</label>
-                        <input
-                          type="text"
-                          class="form-control form-control-sm mar"
-                        />
-                      </div>
-                      <div class="form-row mar">
-                            <div class="form-group col-md-6 ">
-                              <label class="label-sm">Username</label>
-                              <input class="form-control form-control-sm mar" />
-                            </div>
-                            <div class="form-group col-md-6">
-                              <label class="label-sm">Password</label>
-                              <input class="form-control form-control-sm mar" />
-                            </div>
-                          </div>
+              </div>
+            </div>
             <div class="form-group">
               <button [disabled]="loading" class="btn btn-primary float-right">
                 Sign up
