--- a/src/app/insertdata/viewdata/viewdata.component.html
+++ b/src/app/insertdata/viewdata/viewdata.component.html
@@ -1,11 +1,11 @@
-<div class="container-flex ">
+<div class="container-fluid ">
   <!-- Large modal -->
   <form class="formdesign">
     <div class="form-row">
       <div class="form-group col-md-3">
         <button
           type="button"
-          class="btn btn-dark btn-sm"
+          class="btn btn-primary btn-sm"
           data-toggle="modal"
           data-target=".bd-example-modal-lg"
         >
@@ -63,7 +63,7 @@
     aria-labelledby="myLargeModalLabel"
     aria-hidden="true"
   >
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalCenterTitle">Insert Data</h5>
@@ -243,7 +243,7 @@
     </div>
   </div>
 
-  <table class="table table-hover table-sm mar mt-2">
+  <table class="table table-hover table-sm mar ">
     <thead>
       <tr>
         <th>District</th>
