--- a/src/app/insertdata/viewdata/viewdata.component.css
+++ b/src/app/insertdata/viewdata/viewdata.component.css
@@ -10,7 +10,7 @@
     font-size: 12px;
 }
 .formdesign{
-    background-color:  #C0C0C0  ;
+    /* background-color:  #C0C0C0  ; */
     padding: 5px 5px;
     border-radius: 5px;
 }
