--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
           </div>
           <div class="col-sm-6 col-md-4 mt-5">
                 <div class="text-center mb-3">
-                        <img src="/assets/logo1.1.png" class="text-center" style="height: 150px;" />
+                        <img src="/assets/logo1.1.png" class="text-center" style="height: 120px;" />
                         <h6 class=" text-center ">
                                 Congressional Reporting System
                         </h6>
@@ -39,18 +39,18 @@
                                 <div *ngIf="f.password.errors.required">Password is required</div>
                               </div>
                             </div>
-                            <button [disabled]="loading" class="btn btn-primary float-right">
+                            <button [disabled]="loading" class="btn btn-primary float-right mb-3">
                               <span
                                 *ngIf="loading"
                                 class="spinner-border spinner-border-sm mr-1"
                               ></span>
                               Login
                             </button>
-                            <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+                            <div *ngIf="error" class="alert alert-danger mt-5 mb-0">
                               {{ error }}
                             </div>
                           </form>
-                          <p>Not a member?
+                          <p class="mt-3">Not a member?
                                 <a routerLink="/signup">Sign up</a>
                               </p>
                         </div>
