--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
 body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    background-color: #FCFCFC;
 }
