--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,19 @@
 <app-head></app-head>
 <nav class="navbar navbar-expand   mainnav" *ngIf="currentUser">
   <div class="navbar-nav">
-    <a class="nav-item nav-link" routerLink="/"><i class="fa fa-home" aria-hidden="true"></i>
+    <a class="nav-item nav-link" routerLink="/"  routerLinkActive="active"><i class="fa fa-home" aria-hidden="true"></i>
         Dashboard</a>
-    <a class="nav-item nav-link" routerLink="/reports" *ngIf="isAdmin"
+    <a class="nav-item nav-link" routerLink="/reports"  routerLinkActive="active" *ngIf="isAdmin" 
       ><i class="fa fa-newspaper-o" aria-hidden="true"></i>
-
-
       Reports</a
     >
-    <a class="nav-item nav-link" routerLink="/insertdata"><i class="fa fa-table" aria-hidden="true"></i>
+    <a class="nav-item nav-link" routerLink="/reports"  routerLinkActive="active" *ngIf="isPDPO" 
+    ><i class="fa fa-newspaper-o" aria-hidden="true"></i>
+    Reports</a
+  >
+    <a class="nav-item nav-link" routerLink="/insertdata"  routerLinkActive="active"><i class="fa fa-table" aria-hidden="true"></i>
         Insert Data</a>
-    <a class="nav-item nav-link" routerLink="/admin" *ngIf="isPDPO">Admin</a>
-    <a class="nav-item nav-link" routerLink="/manageusers" *ngIf="isAdmin"
+    <a class="nav-item nav-link" routerLink="/manageusers"  routerLinkActive="active" *ngIf="isAdmin"
       ><i class="fa fa-users"></i> Manage Users</a
     >
   </div>
