--- a/src/app/insertdata/insertdata.component.css
+++ b/src/app/insertdata/insertdata.component.css
@@ -1,3 +1,15 @@
 a{
     font-size: 15px;
 }
+.active{
+    background-color: white;
+    /* color: #44F03F ; */
+    color: black;
+
+}
+li{
+    text-align: center;
+}
+.right{
+    border-left: solid 1px  #B1B1B1;
+}
