--- a/src/app/insertdata/insertdata.component.html
+++ b/src/app/insertdata/insertdata.component.html
@@ -1,24 +1,19 @@
-<div class="container-fluid mt-2 ">
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a
-        class="nav-link active"
-        [routerLink]="'viewdata'"
-        routerLinkActive="active"
-        >View Data</a
-      >
-    </li>
-    <li class="nav-item">
-      <a
-        class="nav-link"
-        [routerLink]="'representatives'"
-        routerLinkActive="active"
-        >Representatives</a
-      >
-    </li>
-  </ul>
-</div>
-<div class="container mt-3 ">
-  <router-outlet></router-outlet>
-</div>
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-3 col-md-6 col-lg-4 col-xl-2 left">
+      <ul class="list-group  mt-5">
+        <li class="list-group-item" [routerLink]="'viewdata'"
+        routerLinkActive="active">View Data</li>
+        <li class="list-group-item" [routerLink]="'representatives'"
+        routerLinkActive="active">Representatives</li>
+      </ul>
+    </div>
+    <div class="col-sm-9 col-md-6 col-lg-8 col-xl-10 mt-4">
+      <div class="container-fluid right">
+          <router-outlet></router-outlet>
+      </div>
+      
+    </div>
+  </div>
+</div>
