--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,18 @@
 .mainnav{
     height: 40px;
-    box-shadow: 0px 10px 10px -15px #111;   
-    font-size: 15px;
+    box-shadow: 0px 13px 13px -12px #8B8B8B ;   
+    font-size: 14px;
+    /* background-color: #3C97F9 ; */
+    background-color: #0F77F5 ;
 }
 .mainnav a{
-    padding: 8px 15px;
+    padding: 2px 15px;
+    color: white;
+    height: 25px;
 }
 .mainnav a:hover{   
-    color: black;
-    border-bottom: 1px solid black;
+    /* background-color:#44F03F;
+    border-radius: 12px;
+    color: black */
+    border-bottom: 2px solid  #44F03F ;
 }
