--- a/src/app/head/head.component.css
+++ b/src/app/head/head.component.css
@@ -13,6 +13,7 @@
     /* z-index: 10000; */
     border-bottom: #E9E9E9 .1px solid;
     margin-top: -15px;
+    box-shadow: 0px 10px 10px -15px #111;
   }
   .navbar a {
     color: #000000;
