--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -3,7 +3,7 @@
       </div>
       <nav class="navbar sticky-top navbar-expand-lg  static-top" *ngIf="currentUser">
         <div class="container">
-          <a class="navbar-brand " href="#">
+          <a class="navbar-brand " >
             <img src="/assets/logo1.1.png" class="logs" />
             <a class="sentence">
                 <div class="slidingVertical">
