--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 body{
     /* font-family: Georgia, 'Times New Roman', Times, serif; */
-    background-color: #FCFCFC;
+    /* background-color: #F7F7F7; */
 }
