--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,18 +1,61 @@
-.mainnav{
-    height: 40px;
-    box-shadow: 0px 13px 13px -12px #8B8B8B ;   
-    font-size: 14px;
-    /* background-color: #3C97F9 ; */
-    background-color: #0F77F5 ;
-}
-.mainnav a{
-    padding: 2px 15px;
+
+
+.bg-gray5 {
+    background-color: #181818;
+    height: 100vh;
+    overflow: auto;
+  }
+  .bg-white {
+    background-color: white;
+    border-top: solid #c6c6c5 1px;
+    border-bottom: solid #c6c6c5 1px;
+  }
+  .right {
+    height: 100vh;
+    overflow: auto;
+    
+  }
+  .head {
+    background-color: #2e2d2d;
+    height: 50px;
     color: white;
-    height: 25px;
+    text-align: center;
+  }
+ 
+
+  .bg-dark1 {
+    background-color: #0499F9  ;
+    border-top-right-radius: 30px;
+ 
+  }
+  .list-group-item{
+    background-color: #0499F9  ;
+    border-top-left-radius: 30px;
+ 
+  }
+  .list-group{
+    margin-right: -15px;
+  }
+  .navbar {
+    max-height: 40px;
+    box-shadow: 0px 10px 10px -15px #111;
+  }
+
+
+  .active{
+    background-color: white;
+    color: black;
+    border-left: #59E40F  solid 5px;
+
+
+  }
+  .right{
+    background-color: white;
+  }
+
+i{
+  margin-right: 5px;
 }
-.mainnav a:hover{   
-    /* background-color:#44F03F;
-    border-radius: 12px;
-    color: black */
-    border-bottom: 2px solid  #44F03F ;
-}
+
+
+  
