--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,64 +1,141 @@
-<div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-3 col-md-4 ">
+<!-- <div class="container-fluid">
+  <div class="text-center mb-3">
+    <img src="/assets/logo1.1.png" class="text-center" style="height: 120px;" />
+    <h6 class=" text-center ">
+      Congressional Reporting System
+    </h6>
+  </div>
 
+  <div class="card">
+    <div
+      class="card-body mt-2"
+      style="box-shadow: 0px 13px 13px -12px #8B8B8B ;   "
+    >
+      <h2>Login</h2>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            formControlName="username"
+            class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
+          />
+          <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+            <div *ngIf="f.username.errors.required">Username is required</div>
           </div>
-          <div class="col-sm-6 col-md-4 mt-5">
-                <div class="text-center mb-3">
-                        <img src="/assets/logo1.1.png" class="text-center" style="height: 120px;" />
-                        <h6 class=" text-center ">
-                                Congressional Reporting System
-                        </h6>
-                    </div>
-                    
-                      <div class="card">
-                        <div class="card-body mt-2" style="box-shadow: 0px 13px 13px -12px #8B8B8B ;   ">
-                            <h2>Login</h2>
-                          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                            <div class="form-group">
-                              <label for="username">Username</label>
-                              <input
-                                type="text"
-                                formControlName="username"
-                                class="form-control"
-                                [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
-                              />
-                              <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                                <div *ngIf="f.username.errors.required">Username is required</div>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label for="password">Password</label>
-                              <input
-                                type="password"
-                                formControlName="password"
-                                class="form-control"
-                                [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
-                              />
-                              <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                                <div *ngIf="f.password.errors.required">Password is required</div>
-                              </div>
-                            </div>
-                            <button [disabled]="loading" class="btn btn-primary float-right mb-3">
-                              <span
-                                *ngIf="loading"
-                                class="spinner-border spinner-border-sm mr-1"
-                              ></span>
-                              Login
-                            </button>
-                            <div *ngIf="error" class="alert alert-danger mt-5 mb-0">
-                              {{ error }}
-                            </div>
-                          </form>
-                          <p class="mt-3">Not a member?
-                                <a routerLink="/signup">Sign up</a>
-                              </p>
-                        </div>
-                      </div>
-          </div>
-             <div class="col-sm-3 col-md-4 ">
-          </div>
-          
         </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            formControlName="password"
+            class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+          />
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.required">Password is required</div>
+          </div>
+        </div>
+        <button [disabled]="loading" class="btn btn-primary float-right mb-3">
+          <span
+            *ngIf="loading"
+            class="spinner-border spinner-border-sm mr-1"
+          ></span>
+          Login
+        </button>
+        <div *ngIf="error" class="alert alert-danger mt-5 mb-0">
+          {{ error }}
+        </div>
+      </form>
+      <p class="mt-3">
+        Not a member?
+        <a routerLink="/signup">Sign up</a>
+      </p>
+    </div>
+  </div>
+</div> -->
+
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-3 col-md-6 ">
+          <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="10000">
+                  <img src="/assets/slide1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="2000">
+                  <img src="/assets/slide2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/assets/slide1.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
       </div>
-  
+      <div class="col-sm-9 col-md-6 ">
+          <div class="text-center mb-3">
+              <img src="/assets/logo1.1.png" class="text-center" style="height: 120px;" />
+              <h6 class=" text-center ">
+                Congressional Reporting System
+              </h6>
+            </div>
+          
+            <div class="card">
+              <div
+                class="card-body mt-2"
+                style="box-shadow: 0px 13px 13px -12px #8B8B8B ;   "
+              >
+                <h2>Login</h2>
+                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                  <div class="form-group">
+                    <label for="username">Username</label>
+                    <input
+                      type="text"
+                      formControlName="username"
+                      class="form-control"
+                      [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
+                    />
+                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                      <div *ngIf="f.username.errors.required">Username is required</div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="password">Password</label>
+                    <input
+                      type="password"
+                      formControlName="password"
+                      class="form-control"
+                      [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+                    />
+                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                      <div *ngIf="f.password.errors.required">Password is required</div>
+                    </div>
+                  </div>
+                  <button [disabled]="loading" class="btn btn-primary float-right mb-3">
+                    <span
+                      *ngIf="loading"
+                      class="spinner-border spinner-border-sm mr-1"
+                    ></span>
+                    Login
+                  </button>
+                  <div *ngIf="error" class="alert alert-danger mt-5 mb-0">
+                    {{ error }}
+                  </div>
+                </form>
+                <p class="mt-3">
+                  Not a member?
+                  <a routerLink="/signup">Sign up</a>
+                </p>
+              </div>
+            </div>      </div>
+    </div>
+  </div>
