--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,9 @@
             <li class="list-group-item border-0" routerLink="/insertdata" routerLinkActive="active"><i class="fa fa-table" aria-hidden="true"></i> Insert Data</li>
             <li class="list-group-item border-0" routerLink="/manageusers" *ngIf="isAdmin" routerLinkActive="active"><i class="fa fa-users" aria-hidden="true"></i> Manage Users</li>
             <li class="list-group-item border-0" routerLink="/scanner" routerLinkActive="active"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Scanner</li>
-            <li class="list-group-item border-0"><i class="fa fa-heart" aria-hidden="true"></i> Programs</li>
+            <li class="list-group-item border-0" routerLink="/programs" *ngIf="isAdmin" routerLinkActive="active"><i class="fa fa-heart" aria-hidden="true"></i> Programs</li>
+            <li class="list-group-item border-0" routerLink="/programs" *ngIf="isPDPO" routerLinkActive="active"><i class="fa fa-heart" aria-hidden="true"></i> Programs</li>
+
         </ul>
       </div>
       <div class="col-sm-9 col-md-6 col-lg-8 col-xl-10 ">
