--- a/src/app/insertdata/representatives/representatives.component.html
+++ b/src/app/insertdata/representatives/representatives.component.html
@@ -127,7 +127,7 @@
                   <td>Cebu</td>
                   <td>
                       <button class="btn btn-primary btn-sm">Edit</button>
-                      <button class="btn btn-dark ml-2 btn-sm">Delete</button>
+                      <button class="btn btn-danger ml-2 btn-sm"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
                   </td>
               </tr>
               <tr>
@@ -136,7 +136,7 @@
                       <td>Cebu</td>
                       <td>
                           <button class="btn btn-primary btn-sm">Edit</button>
-                          <button class="btn btn-dark ml-2 btn-sm">Delete</button>
+                          <button class="btn btn-danger ml-2 btn-sm"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
                       </td>
                   </tr>
           </tbody>
