--- a/src/app/insertdata/viewdata/viewdata.component.html
+++ b/src/app/insertdata/viewdata/viewdata.component.html
@@ -9,7 +9,7 @@
           data-toggle="modal"
           data-target=".bd-example-modal-lg"
         >
-          Insert Data
+        <i class="fa fa-plus" aria-hidden="true"></i>
         </button>
 
         <button
