--- a/src/app/passwordsettings/passwordsettings.component.html
+++ b/src/app/passwordsettings/passwordsettings.component.html
@@ -1,11 +1,33 @@
-<div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-3 col-md-6 col-lg-4 col-xl-2 bg-success">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </div>
-          <div class="col-sm-9 col-md-6 col-lg-8 col-xl-10 bg-warning">
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-          </div>
-        </div>
-      </div>
+<div class="container-fluid mt-4">
+  <div class="container passdiv">
+    <div class="container">
+      <h5>Change Password</h5>
+      <hr class="mb-5">
+        <form >
+            <div class="form-group row">
+              <label for="inputPassword" class="col-sm-2 col-form-label">Old Password</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="inputPassword" placeholder="Old Password">
+              </div>
+            </div>
+            <p class="text-center">**You can only change your password once in 2 months**</p>
+            <div class="form-group row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">New Password</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="inputPassword" placeholder="New Password">
+                </div>
+              </div>
+              <div class="form-group row">
+                  <label for="inputPassword" class="col-sm-2 col-form-label">Retype Password</label>
+                  <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Retype Password">
+                  </div>
+                </div>
+                <button class="btn btn-secondary">cancel</button>
+                <button class="btn btn-primary  float-right ">Save</button>
+
+          </form>
+    </div>
+    
+  </div>
+</div>
