--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -5,12 +5,29 @@ img{
 }
 .profilecard{
     border: solid 1px #DBDBDB;
+    box-shadow:1px 1px 4px 4px  #E3E3E3;
    padding: 8px 10px;
    background-color: white;
 }
-.title h4{
+/* .title h4{
     color: #0F77F5 ;
     border-bottom: 2px solid #44F03F ;
-    /* background-color: #5C5C5C ; */
+    
     width: 200px;
+} */
+/* em{
+    color: #44F03F ;
+} */
+.avatarbtn{
+    background-color: #0499F9 ;
+    color: white;
+    border: none;
+    height: 20px;
+    width: 100px;
+    font-size: 12px;
+    border-radius: 5px;
+}
+.avatarbtn:hover{
+    background-color: #5C5D5C ;
+    color: #44F03F;
 }
