--- a/src/app/manageusers/activeusers/activeusers.component.html
+++ b/src/app/manageusers/activeusers/activeusers.component.html
@@ -165,8 +165,8 @@
               <td>{{ user.mobileno }}</td>
               <td>{{ user.department }}</td>
               <td>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-dark ml-2 btn-sm">Delete</button>
+                  <button class="btn btn-primary btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+                  <button class="btn btn-danger ml-2 btn-sm"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
               </td>
             </tr>
           </tbody>
