--- a/src/app/programs/programs.component.html
+++ b/src/app/programs/programs.component.html
@@ -130,7 +130,8 @@
         <td>1028929089</td>
         <td>546768890000</td>
         <td>
-          <button class="btn btn-primary btn-sm">Edit</button>
+          <button class="btn btn-primary btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i>
+          </button>
           <button class="btn btn-danger ml-2 btn-sm"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
         </td>
       </tr>
@@ -140,7 +141,8 @@
         <td>1028929089</td>
         <td>546768890000</td>
         <td>
-          <button class="btn btn-primary btn-sm">Edit</button>
+          <button class="btn btn-primary btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i>
+          </button>
           <button class="btn btn-danger ml-2 btn-sm"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
         </td>
       </tr>
