--- a/src/app/manageusers/manageusers.component.css
+++ b/src/app/manageusers/manageusers.component.css
@@ -2,7 +2,7 @@
     box-shadow: 0px 10px 10px -15px #111; 
     border-bottom-right-radius: 15px;  
     border-bottom-left-radius: 15px;  
-    background-color: #CFECFE  ;
+    background-color: #E0F4FF  ;
 
 }
 .usersnav a{
