--- a/src/app/insertdata/viewdata/viewdata.component.html
+++ b/src/app/insertdata/viewdata/viewdata.component.html
@@ -9,7 +9,7 @@
           data-toggle="modal"
           data-target=".bd-example-modal-lg"
         >
-        <i class="fa fa-plus" aria-hidden="true"></i>
+        <i class="fa fa-plus" aria-hidden="true"></i> Add
         </button>
 
         <button
@@ -18,7 +18,7 @@
           data-toggle="modal"
           data-target="#exampleModalCenter"
         >
-          Import File
+        <i class="fa fa-file-excel-o" aria-hidden="true"></i> Import  
         </button>
       </div>
       <div class="form-group col-md-9">
@@ -276,34 +276,35 @@
       </tr> 
     </tbody>
   </table>
-  <div class="container-flex bot">
-    <form>
-      <div class="form-row">
-        <div class="form-group col-md-3">
-          <label class=" col-form-label-sm" for="inputEmail4"
-            >Provincial Total No. of Beneficiaries</label
-          >
-          <input class="form-control form-control-sm mar" />
-        </div>
-        <div class="form-group col-md-3">
-          <label class=" col-form-label-sm"
-            >Provincial Total Amount Disbursed</label
-          >
-          <input class="form-control form-control-sm mar" />
-        </div>
-        <div class="form-group col-md-3">
-          <label class=" col-form-label-sm"
-            >District Total No. of Beneficiaries</label
-          >
-          <input class="form-control form-control-sm mar" />
-        </div>
-        <div class="form-group col-md-3">
-          <label class=" col-form-label-sm"
-            >District Total Amount Disbursed</label
-          >
-          <input class="form-control form-control-sm mar" />
-        </div>
+  
+</div>
+<div class="fixed-bottom totaldiv">
+  <form>
+    <div class="form-row">
+      <div class="form-group col-md-3">
+        <label class=" col-form-label-sm" 
+          >Provincial Total No. of Beneficiaries</label
+        >
+        <input class="form-control form-control-sm mar" />
       </div>
-    </form>
-  </div>
+      <div class="form-group col-md-3">
+        <label class=" col-form-label-sm"
+          >Provincial Total Amount Disbursed</label
+        >
+        <input class="form-control form-control-sm mar" />
+      </div>
+      <div class="form-group col-md-3">
+        <label class=" col-form-label-sm"
+          >District Total No. of Beneficiaries</label
+        >
+        <input class="form-control form-control-sm mar" />
+      </div>
+      <div class="form-group col-md-3">
+        <label class=" col-form-label-sm"
+          >District Total Amount Disbursed</label
+        >
+        <input class="form-control form-control-sm mar" />
+      </div>
+    </div>
+  </form>
 </div>
