--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-        <div class="container mt-4 reports-filter">
+<div class="container-fluid">
+        <div class="container-fluid mt-4 reports-filter">
                 <form>
                   <div class="form-row">
                     <div class="form-group col-md-6">
