--- a/src/app/insertdata/viewdata/viewdata.component.css
+++ b/src/app/insertdata/viewdata/viewdata.component.css
@@ -14,3 +14,8 @@
     padding: 5px 5px;
     border-radius: 5px;
 }
+.totaldiv{
+    padding: 10px 10px;
+    background-color: white;
+    box-shadow: 0px 10px 5px 10px #ACACAD ;
+}
