--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -94,18 +94,18 @@
                       <div class="form-row">
                         <div class="form-group col-md-6">
                           <label for="inputEmail4">Firstname</label>
-                          <input class="form-control" placeholder="Firstname" />
+                          <input class="form-control form-control-sm" placeholder="Firstname" />
                         </div>
                         <div class="form-group col-md-6">
                           <label>Lastname</label>
-                          <input class="form-control" placeholder="Lastname" />
+                          <input class="form-control form-control-sm" placeholder="Lastname" />
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="inputAddress">Address</label>
                         <input
                           type="text"
-                          class="form-control"
+                          class="form-control form-control-sm"
                           id="inputAddress"
                           placeholder="Address"
                         />
@@ -115,24 +115,24 @@
                           <label for="inputEmail4">Mobile number</label>
                           <input
                             type="email"
-                            class="form-control"
+                            class="form-control form-control-sm"
                             id="inputEmail4"
                             placeholder="Mobile number"
                           />
                         </div>
                         <div class="form-group col-md-6">
                           <label for="inputState">Department</label>
-                          <select id="inputState" class="form-control">
+                          <select id="inputState" class="form-control form-control-sm">
                             <option>Department 1</option>
                             <option>Department 2</option>
                           </select>
                         </div>
                       </div>
                       <div class="form-group">
-                          <label for="inputAddress">Username</label>
+                          <label >Username</label>
                           <input
                             type="text"
-                            class="form-control"
+                            class="form-control form-control-sm"
                             placeholder="Username"
                           />
                         </div>
