--- a/src/app/programs/programs.component.html
+++ b/src/app/programs/programs.component.html
@@ -9,7 +9,7 @@
           data-toggle="modal"
           data-target=".bd-example-modal-lg"
         >
-          Add Program
+        <i class="fa fa-plus" aria-hidden="true"></i> Add Program
         </button>
       </div>
       <div class="form-group col-md-10">
@@ -30,10 +30,10 @@
     aria-labelledby="myLargeModalLabel"
     aria-hidden="true"
   >
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
+    <div class="modal-dialog  modal-dialog-centered">
+      <div class="modal-content ">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalCenterTitle">Add User</h5>
+          <h5 class="modal-title" id="exampleModalCenterTitle">Add Program</h5>
           <button
             type="button"
             class="close"
@@ -45,59 +45,32 @@
         </div>
         <div class="modal-body">
           <form>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputEmail4">Firstname</label>
-                <input class="form-control" placeholder="Firstname" />
-              </div>
-              <div class="form-group col-md-6">
-                <label>Lastname</label>
-                <input class="form-control" placeholder="Lastname" />
-              </div>
-            </div>
             <div class="form-group">
-              <label for="inputAddress">Address</label>
+              <label for="inputAddress">Program Name</label>
               <input
                 type="text"
                 class="form-control"
-                id="inputAddress"
-                placeholder="Address"
               />
             </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputEmail4">Mobile number</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="inputEmail4"
-                  placeholder="Mobile number"
-                />
-              </div>
-              <div class="form-group col-md-6">
-                <label for="inputState">Department</label>
-                <select id="inputState" class="form-control">
-                  <option>Department 1</option>
-                  <option>Department 2</option>
-                </select>
-              </div>
+            <div class="form-group">
+              <label for="inputState">Department</label>
+              <select id="inputState" class="form-control">
+                <option>Department 1</option>
+                <option>Department 2</option>
+              </select>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
-                <label for="inputEmail4">Username</label>
+                <label for="inputEmail4">Target Beneficiaries</label>
                 <input
                   class="form-control"
-                  id="inputEmail4"
-                  placeholder="username"
                 />
               </div>
               <div class="form-group col-md-6">
-                <label for="inputPassword4">Password</label>
+                <label for="inputPassword4">Funds</label>
                 <input
-                  type="password"
+                  
                   class="form-control"
-                  id="inputPassword4"
-                  placeholder="Password"
                 />
               </div>
             </div>
@@ -130,9 +103,9 @@
         <td>1028929089</td>
         <td>546768890000</td>
         <td>
-          <button class="btn btn-primary btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i>
+          <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#editmodal"><i class="fa fa-pencil" aria-hidden="true"></i>
           </button>
-          <button class="btn btn-danger ml-2 btn-sm"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+          <button class="btn btn-danger ml-2 btn-sm" data-toggle="modal" data-target="#deletemodal"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
         </td>
       </tr>
       <tr>
@@ -148,4 +121,80 @@
       </tr>
     </tbody>
   </table>
+</div>
+
+
+
+
+<!-- EDIT Modal -->
+<div class="modal fade" id="editmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Edit Program</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="inputAddress">Program Name</label>
+            <input
+              type="text"
+              class="form-control"
+            />
+          </div>
+          <div class="form-group">
+            <label for="inputState">Department</label>
+            <select id="inputState" class="form-control">
+              <option>Department 1</option>
+              <option>Department 2</option>
+            </select>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputEmail4">Target Beneficiaries</label>
+              <input
+                class="form-control"
+              />
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputPassword4">Funds</label>
+              <input
+                
+                class="form-control"
+              />
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- DELETE Modal -->
+<div class="modal fade" id="deletemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Delete Program</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p class="text-center">Are you sure you want to delete this program?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger">Delete</button>
+      </div>
+    </div>
+  </div>
 </div>
