--- a/src/app/reports/reports.component.css
+++ b/src/app/reports/reports.component.css
@@ -16,7 +16,7 @@
     border-radius: 10px;
   }
   .reportpanel{
-    background-color:  #CBCBCB;
+    background-color:  #EAEAEA ;
     padding: 40px 20px;
     border-radius: 10px;
     margin-top: 30px;
